# ADBA-ANDROIDATABASE

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-android.yml  release.yml
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  discovery.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
