[package]
name = "adba"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "adba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database - SQLite (lightweight, no native deps like libclang)
rusqlite = { version = "0.32", features = ["bundled"] }

# REST API Server (simpler than PostgreSQL wire protocol for v1)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Network discovery (mDNS for LAN)
mdns-sd = "0.11"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
parking_lot = "0.12"
hostname = "0.4"

